Fix stacktrace overflow bug (#127)
* add word-break for errorURL

* limit stepContent to two lines

* update marker sizes

* lint fix

--- a/src/components/Steps/components/ActionRecord/ActionRecord.module.scss
+++ b/src/components/Steps/components/ActionRecord/ActionRecord.module.scss
@@ -35,6 +35,7 @@
 
 .errorUrl {
     margin-top: 8px;
+    word-break: break-all;
 }
 
 .accordionDetails {
